2.8.16
mob bonus dmg status effect nerfed
/givestat -> /give statmod
new command /givestat
dmg particles now include element icon
2.8.15
sets now only show stats if you have them equipped, fixes 0 set stat tooltip bug
updated chinese lang files
staffs no longer restore half energy on missed projectile
maps no longer say broken
torches take more time to use but restore more
fix configs like energy regen per lvl not scaling per lvl
configs added: STAT_POINTS_PER_LEVEL, STAT_REQUIREMENTS_MULTI
increased unique dropchance a bit
dmg particles are a bit slower now
dmg paticles have configs now
moved configs to dmg particle configs
2.8.14
not meeting gear requirements now no longer spams your chat, but does show gui on the right
2.8.13
offhand now gets damaged by attacks too
added a currency item
items now show on tooltip if they are considered broken
2.8.12
more map loot bonus, higher rarity maps will now be a lot more rewarding to play!
charms now have higher primary stat numbers
made professions a bit easier to lvl
added more logging to map teleports, maybe it helps in debugging the random tp problems
fixed profession stations eating items if you have more than 1 stack
2.8.11
wands now use right click too
increased gear droprate a bit cus of added gear types (config change)
wands and staffs now need a minimum charge on right click to shoot
shield secondary armor stat is now much higher
increased max armor and ele resist % from 75% to 80%
added a new currency item
2.8.10
staff right click attack now multiplies dmg more but costs more too
bolt spells now cost twice as much but do twice as much dmg
2.8.9
added wands! (thanks tom for the textures!) balance still wonky. will adjust probably
staffs now cost mana too but less energy
fixed bomb and explosion spells. woops.
added a few particles to spells
2.8.8
staffs now work like bows
projectiles now no longer randomly miss as they work like arrows
buffed homing
could be buggy
2.8.7